--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
     "python.autoComplete.extraPaths": ["./Python"],
-    "java.project.sourcePaths": ["./Java"]
+    "java.project.sourcePaths": [
+        "./Java"
+    ],
+    "python.analysis.extraPaths": [
+        "./Python"
+    ],
 }
